--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,6 +22,17 @@
         android:layout_below="@+id/instructions_text_view"
         android:text="@string/button_text" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/instructions_text_view"
+        android:layout_below="@+id/joke_btn"
+        android:layout_marginEnd="26dp"
+        android:layout_marginTop="31dp"
+        android:progressDrawable="@drawable/circular_progress_bar" />
+
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="wrap_content"
