a little color and clean up gradle files

--- a/app/src/main/res/layout/error_layout.xml
+++ b/app/src/main/res/layout/error_layout.xml
@@ -39,7 +39,7 @@
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="@dimen/activity_margin_content"
                   android:text="@string/btn_retry"
-                  android:textColor="@color/colorPrimary"/>
+                  android:textColor="@color/primaryTextColor"/>
 
           </LinearLayout>
 
