--- a/app/src/free/res/layout/fragment_main.xml
+++ b/app/src/free/res/layout/fragment_main.xml
@@ -1,7 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/backgroundColor">
 
     <!-- Attribution http://blog.iamsuleiman.com/android-pagination-error-handling/ -->
     <include
@@ -23,14 +24,18 @@
             android:id="@+id/instructions_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/CasualText"
             android:text="@string/instructions" />
 
         <Button
             android:id="@+id/joke_btn"
+            style="@style/ButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/instructions_text_view"
-            android:text="@string/button_text" />
+            android:layout_marginTop="16dp"
+            android:text="@string/button_text"
+            android:textStyle="bold|italic" />
 
         <ProgressBar
             android:id="@+id/progressBar"
