--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#303f9f</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="primaryColor">#80cbc4</color>
+    <color name="primaryLightColor">#ffcccb</color>
+    <color name="primaryDarkColor">#4f9a94</color>
+    <color name="secondaryColor">#78909c</color>
+    <color name="secondaryLightColor">#a7c0cd</color>
+    <color name="secondaryDarkColor">#4b636e</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#000000</color>
+    <color name="backgroundColor">#cfd8dc</color>
 </resources>
