--- a/app/src/paid/res/layout/fragment_main.xml
+++ b/app/src/paid/res/layout/fragment_main.xml
@@ -1,15 +1,16 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/backgroundColor">
 
     <!-- Attribution http://blog.iamsuleiman.com/android-pagination-error-handling/ -->
     <include
         layout="@layout/error_layout"
         />
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
+
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,14 +24,18 @@
             android:id="@+id/instructions_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/CasualText"
             android:text="@string/instructions" />
 
         <Button
             android:id="@+id/joke_btn"
+            style="@style/ButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/instructions_text_view"
-            android:text="@string/button_text" />
+            android:layout_marginTop="16dp"
+            android:text="@string/button_text"
+            android:textStyle="bold|italic" />
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -42,8 +47,6 @@
             android:layout_marginEnd="26dp"
             android:layout_marginTop="31dp"
             android:progressDrawable="@drawable/circular_progress_bar" />
-
-
 
 
     </RelativeLayout>
