--- a/jokeviewer/src/main/res/layout/fragment_joke_viewer_main_activity.xml
+++ b/jokeviewer/src/main/res/layout/fragment_joke_viewer_main_activity.xml
@@ -17,13 +17,15 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:fontFamily="casual"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.26"
+            app:layout_constraintVertical_bias="0.23000002"
             tools:text="Joke Display" />
 
 
